# stock_datasource

./: .dockerignore  .env.docker  .env.example  .gitignore  .gitleaks.toml  .releaserc.json  A2A_ARCHITECTURE_ANALYSIS.md  A2A_INVESTIGATION_COMPLETE.md  A2A_INVESTIGATION_INDEX.md  A2A_INVESTIGATION_REPORT.md  AGENT_TEAMS_ARCHITECTURE.md  AGENT_TEAMS_DIAGRAMS.md  ARCHITECTURAL_IMPACT_ASSESSMENT.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_SUMMARY.md  ARENA_CHAT_INTEGRATION_DESIGN.md  ARENA_CHAT_INTEGRATION_STATUS.md  ARENA_CHAT_INTEGRATION_SUMMARY.md  COMPONENT_INTEGRATION_GUIDE.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  EXPLORATION_REPORT.md  FINAL_INVESTIGATION_SUMMARY.md  FRONTEND_EXPLORATION_SUMMARY.md  FRONTEND_PATTERNS_QUICK_REFERENCE.md  FRONTEND_ROUTING_LAYOUT_REPORT.md  IMPLEMENTATION_DESIGN_OPTION1.md  IMPLEMENTATION_PHASE2_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STEP_BY_STEP.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_COMPLETE.md  INVESTIGATION_INDEX.md  INVESTIGATION_SUMMARY.md  LICENSE  PHASE2_COMPLETION_SUMMARY.md  PHASE3_IMPLEMENTATION_COMPLETE.md  PLUGIN_QUICK_START.md  PLUGIN_UPDATE_GUIDE.md  QUICK_REFERENCE.md  (+23 more)
data/: email.txt
docker/: 001_system_structured_logs.sql  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.production  init-clickhouse.sql  nginx.conf  run-migrations.sh  signal_snapshot.sql
docs/: HARNESS_MIGRATION_GUIDE.md  HARNESS_MIGRATION_METHOD.md  logging-tracing-overhaul.md  memory-system-design.md
frontend/: nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  (+2 more)
(+1311 files in other folders)
